--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,19 +8,18 @@ jobs:
   build:
     name: Build (msvc-${{matrix.msvc}})
     runs-on: windows-latest
-    env:
-      PACKAGE: ghcr.io/${{github.repository_owner}}/build-windows
     strategy:
       matrix:
         msvc: [15, 16]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2.3.4
       - name: Gather info
         id: info
         run: |
-          $tag = "${{env.PACKAGE}}:msvc-${{matrix.msvc}}".ToLower()
+          $package = 'ghcr.io/${{github.repository_owner}}/build-windows'
+          $tag = "${package}:msvc-${{matrix.msvc}}".ToLower()
           echo "::set-output name=tag::$tag"
+      - name: Checkout code
+        uses: actions/checkout@v2.3.4
       - name: Build image
         run: >
           docker build .
@@ -29,7 +28,6 @@ jobs:
       - name: Report image details
         run: >
           docker image history
-          --no-trunc
           --format "table {{.Size}}\t{{.CreatedBy}}"
           ${{steps.info.outputs.tag}}
       - name: Login to registry
