--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,11 @@ jobs:
           docker image history
           --format "table {{.Size}}\t{{.CreatedBy}}"
           ${{steps.info.outputs.tag}}
+      - name: Run tests
+        run: >
+          docker run --rm ${{steps.info.outputs.tag}}
+          'cl /help;link /help;cmake --version;ninja --version;
+          msbuild /version;git --version;python --version;sccache --version'
       - name: Login to registry
         if: github.ref == 'refs/heads/main'
         run: >
