--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,31 +24,44 @@ jobs:
         id: info
         run: |
           $package = 'ghcr.io/${{github.repository_owner}}/build-windows'
-          $tag = "${package}:msvc-${{matrix.msvc}}".ToLower()
-          echo "::set-output name=tag::$tag"
-      - name: Checkout
-        uses: actions/checkout@v2.3.4
+          $tags = "${package}:msvc-${{matrix.msvc}}".ToLower()
+          echo "::set-output name=tags::$tags"
+          echo "::set-output name=package::$package"
+      - name: Set up docker buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1.3.0
+        with:
+          driver: docker
+          version: latest
       - name: Build image
-        run: >
-          docker build .
-          -t ${{steps.info.outputs.tag}}
-          --build-arg VS_VERSION=${{matrix.msvc}}
+        uses: docker/build-push-action@v2.5.0
+        with:
+          tags: ${{steps.info.outputs.tags}}
+          build-args: VS_VERSION=${{matrix.msvc}}
+          push: false
+          load: true
       - name: Report image details
         run: >
           docker image history
           --format "table {{.Size}}\t{{.CreatedBy}}"
-          ${{steps.info.outputs.tag}}
+          ${{steps.info.outputs.package}}
       - name: Run tests
         run: >
-          docker run --rm ${{steps.info.outputs.tag}}
+          docker run --rm ${{steps.info.outputs.package}}
           'cl /help -and link /help -and cmake --version -and
           ninja --version -and msbuild /version -and git --version -and
           python --version -and sccache --version'
-      - name: Login to registry
+      - name: Log into registry
         if: github.ref == 'refs/heads/main'
-        run: >
-          echo ${{github.token}} |
-          docker login ghcr.io -u ${{github.actor}} --password-stdin
+        uses: docker/login-action@v1.9.0
+        with:
+          registry: ghcr.io
+          username: ${{github.actor}}
+          password: ${{github.token}}
       - name: Push image
         if: github.ref == 'refs/heads/main'
-        run: docker push ${{steps.info.outputs.tag}}
+        uses: docker/build-push-action@v2.4.0
+        with:
+          tags: ${{steps.info.outputs.tags}}
+          build-args: VS_VERSION=${{matrix.msvc}}
+          push: true
