--- a/.github/workflows/update-license.yml
+++ b/.github/workflows/update-license.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Determine year
         id: year
         run: echo "::set-output name=value::$(date +%Y)"
-      - name: Create/switch to ${{env.BRANCH}}
+      - name: Switch to '${{env.BRANCH}}'
         run: |
           git fetch origin +refs/heads/$BRANCH:refs/heads/$BRANCH || true  
           git checkout $BRANCH || git checkout -b $BRANCH
@@ -47,20 +47,19 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            const owner = '${{github.repository_owner}}';
-            const repo = 'DockerBuildWindows';
+            const [owner, repo] = '${{github.repository}}'.split('/');
             const base = 'refs/heads/main';
             const head = 'refs/heads/${{env.BRANCH}}';
-            const pullRequests = await github.pulls.list({
+            const pullRequests = await github.rest.pulls.list({
               head: `${owner}:${head}`,
               owner, repo, base
             });
             if (pullRequests.data.length === 0) {
-              const createResult = await github.pulls.create({
+              const createResult = await github.rest.pulls.create({
                 title: 'Update license year to ${{steps.year.outputs.value}}',
                 owner, repo, head, base
               });
-              github.issues.addLabels({
+              github.rest.issues.addLabels({
                 issue_number: createResult.data.number,
                 owner, repo, labels: ['auto']
               });
@@ -68,7 +67,7 @@ jobs:
               return createResult.data.number;
             } else {
               const prNumber = pullRequests.data.first().number;
-              github.issues.update({
+              github.rest.issues.update({
                 issue_number: prNumber,
                 title: 'Update license year to ${{steps.year.outputs.value}}',
                 owner, repo
