--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ concurrency:
 jobs:
   build:
     name: Build (msvc-${{matrix.msvc}})
-    runs-on: windows-latest
+    runs-on: windows-2022
     strategy:
       matrix:
         msvc:
