--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,23 +24,29 @@ jobs:
         id: info
         run: |
           $package = 'ghcr.io/${{github.repository_owner}}/build-windows'
-          $tag = "${package}:msvc-${{matrix.msvc}}".ToLower()
-          echo "::set-output name=tag::$tag"
+          $tags = "${package}:msvc-${{matrix.msvc}}".ToLower()
+          echo "::set-output name=tags::$tags"
+          echo "::set-output name=package::$package"
       - name: Checkout
         uses: actions/checkout@v2.4.0
+      - name: Set up docker buildx
+        uses: docker/setup-buildx-action@v1.6.0
       - name: Build image
-        run: >
-          docker build .
-          -t ${{steps.info.outputs.tag}}
-          --build-arg VS_VERSION=${{matrix.msvc}}
+        uses: docker/build-push-action@v2.9.0
+        with:
+          context: .
+          tags: ${{steps.info.outputs.tags}}
+          build-args: VS_VERSION=${{matrix.msvc}}
+          push: false
+          load: true
       - name: Report image details
         run: >
           docker image history
           --format "table {{.Size}}\t{{.CreatedBy}}"
-          ${{steps.info.outputs.tag}}
+          ${{steps.info.outputs.package}}
       - name: Run tests
         run: >
-          docker run --rm ${{steps.info.outputs.tag}}
+          docker run --rm ${{steps.info.outputs.package}}
           'cl /help -and link /help -and cmake --version -and
           ninja --version -and msbuild /version -and git --version -and
           python --version -and sccache --version'
@@ -52,5 +58,8 @@ jobs:
           username: ${{github.actor}}
           password: ${{github.token}}
       - name: Push image
-        if: github.ref == 'refs/heads/main'
-        run: docker push ${{steps.info.outputs.tag}}
+        uses: docker/build-push-action@v2.9.0
+        with:
+          tags: ${{steps.info.outputs.tags}}
+          build-args: VS_VERSION=${{matrix.msvc}}
+          push: true
