--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,10 @@ jobs:
           echo "::set-output name=package::$package"
       - name: Checkout
         uses: actions/checkout@v2.4.0
+      - name: Set up docker buildx
+        uses: docker/setup-buildx-action@v1.6.0
+        with:
+          install: true
       - name: Build image
         uses: docker/build-push-action@v2.9.0
         with:
