--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Set up docker buildx
         uses: docker/setup-buildx-action@v1.6.0
         with:
-          driver: docker
+          install: true
           driver-opts: image=moby/buildkit:master
       - name: Build image
         uses: docker/build-push-action@v2.9.0
