--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
         uses: docker/setup-buildx-action@v1.6.0
         with:
           install: true
+          driver: docker
           driver-opts: image=moby/buildkit:master
       - name: Build image
         uses: docker/build-push-action@v2.9.0
